--- a/workflows/exploratory_analyses.Rmd
+++ b/workflows/exploratory_analyses.Rmd
@@ -825,3 +825,4 @@ ggarrange(a, b,
 
 # Open questions
 - How would marker lists perform across disease states or varying age groups? 
+- How do these lists perform using other methods e.g. MetaNeighbor (https://www.nature.com/articles/s41467-018-03282-0)?
